--- a/app/src/main/res/layout/activity_only_team_preview.xml
+++ b/app/src/main/res/layout/activity_only_team_preview.xml
@@ -69,29 +69,6 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <com.google.android.flexbox.FlexboxLayout
-                android:id="@+id/LL_GroundWK"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:flexWrap="wrap"
-                app:justifyContent="space_around">
-
-            </com.google.android.flexbox.FlexboxLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="10">
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_weight="10"
-                    android:background="@color/white" />
-
-            </LinearLayout>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -112,28 +89,13 @@
             </LinearLayout>
 
             <com.google.android.flexbox.FlexboxLayout
-                android:id="@+id/LL_GroundBAT"
+                android:id="@+id/LL_GroundWK"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:flexWrap="wrap"
                 app:justifyContent="space_around">
 
             </com.google.android.flexbox.FlexboxLayout>
-
-            <LinearLayout
-                android:id="@+id/linerLayout1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:weightSum="10">
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_weight="10"
-                    android:background="@color/white" />
-
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -151,44 +113,20 @@
                     android:layout_marginEnd="5dp"
                     android:layout_weight="10"
                     android:gravity="center"
-                    android:text="Batsman"
+                    android:text="Batters"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
-
             </LinearLayout>
 
-            <HorizontalScrollView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fillViewport="true"
-                android:overScrollMode="never"
-                android:scrollbarSize="0.1dp">
-
-                <com.google.android.flexbox.FlexboxLayout
-                    android:id="@+id/LL_GroundAR"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:flexWrap="wrap"
-                    app:justifyContent="space_around">
-
-                </com.google.android.flexbox.FlexboxLayout>
-
-            </HorizontalScrollView>
-
-            <LinearLayout
+            <com.google.android.flexbox.FlexboxLayout
+                android:id="@+id/LL_GroundBAT"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:weightSum="10">
+                app:flexWrap="wrap"
+                app:justifyContent="space_around">
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_toLeftOf="@+id/tvall"
-                    android:layout_weight="10"
-                    android:background="@color/white" />
+            </com.google.android.flexbox.FlexboxLayout>
 
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -221,7 +159,7 @@
                 android:scrollbarSize="0.1dp">
 
                 <com.google.android.flexbox.FlexboxLayout
-                    android:id="@+id/LL_GroundBOWL"
+                    android:id="@+id/LL_GroundAR"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:flexWrap="wrap"
@@ -231,20 +169,6 @@
 
             </HorizontalScrollView>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:weightSum="10">
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_below="@+id/tvbw"
-                    android:layout_alignParentBottom="true"
-                    android:layout_weight="10"
-                    android:background="@color/white" />
-
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -267,6 +191,31 @@
                     android:textStyle="bold" />
 
             </LinearLayout>
+
+
+
+            <HorizontalScrollView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fillViewport="true"
+                android:overScrollMode="never"
+                android:scrollbarSize="0.1dp">
+
+                <com.google.android.flexbox.FlexboxLayout
+                    android:id="@+id/LL_GroundBOWL"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:flexWrap="wrap"
+                    app:justifyContent="space_around">
+
+                </com.google.android.flexbox.FlexboxLayout>
+
+            </HorizontalScrollView>
+
+
+
+
 
         </LinearLayout>
 
