--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -112,6 +112,7 @@
             android:layout_width="match_parent"
             android:layout_height="25dp"
             android:layout_marginLeft="10dp"
+            android:visibility="gone"
             android:layout_marginTop="110dp"
             android:layout_marginRight="10dp"
             android:gravity="center"
