onlyteam_preview_list.xml..

--- a/app/src/main/res/layout/activity_contest.xml
+++ b/app/src/main/res/layout/activity_contest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -84,7 +84,8 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar">
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/contests"
@@ -115,16 +116,20 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="550dp"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="45dp"
+        android:layout_below="@+id/tabLayout"
         android:layout_marginTop="5dp" />
 
     <LinearLayout
         android:id="@+id/createTeamLayout"
         android:layout_width="match_parent"
         android:layout_height="38dp"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="center"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/border2_black"
         android:gravity="center"
         android:orientation="horizontal"
@@ -174,9 +179,11 @@
         android:id="@+id/createTeamLay"
         android:layout_width="match_parent"
         android:layout_height="38dp"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="center"
         android:layout_marginLeft="100dp"
         android:layout_marginRight="100dp"
+        android:layout_marginBottom="5dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:visibility="gone">
@@ -195,4 +202,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
