--- a/app/src/main/res/layout/activity_only_team_preview.xml
+++ b/app/src/main/res/layout/activity_only_team_preview.xml
@@ -282,7 +282,7 @@
             android:id="@+id/JoinTeam"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="In Dream Team"
+            android:text="In YoYoiQ Team"
             android:textColor="@color/white"
             android:textSize="12sp"
             android:textStyle="bold" />
