KYC/KYCActivity.java..

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -50,9 +50,10 @@
             android:id="@+id/userName"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_gravity="center"
             android:layout_marginTop="5dp"
             android:background="@color/light_gray"
+            android:gravity="left"
+            android:padding="12dp"
             android:text="User Name"
             android:textColor="@color/black"
             android:textStyle="bold" />
@@ -72,6 +73,8 @@
             android:layout_gravity="center"
             android:layout_marginTop="5dp"
             android:background="@color/light_gray"
+            android:gravity="left"
+            android:padding="12dp"
             android:text="Email"
             android:textColor="@color/black"
             android:textStyle="bold" />
@@ -96,6 +99,7 @@
             android:layout_weight="10"
             android:background="@color/light_gray"
             android:gravity="left"
+            android:padding="12dp"
             android:text="9090808899"
             android:textColor="@color/black"
             android:textSize="17sp"
@@ -108,7 +112,8 @@
             android:layout_marginRight="5dp"
             android:background="@color/light_gray"
             android:drawableRight="@drawable/ic_baseline_mode_edit_black"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:visibility="gone" />
 
     </LinearLayout>
 
@@ -119,12 +124,14 @@
         android:orientation="vertical">
 
         <Button
+            android:id="@+id/date_of_birth"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="5dp"
             android:layout_marginRight="200dp"
             android:backgroundTint="@color/light_gray"
-            android:hint="Date of Birth" />
+            android:hint="Date of Birth"
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
@@ -132,7 +139,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <RadioGroup
             android:id="@+id/radioGrp"
@@ -187,10 +195,12 @@
         android:weightSum="10">
 
         <TextView
+            android:id="@+id/city"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@color/light_gray"
             android:gravity="left"
+            android:padding="12dp"
             android:text="City"
             android:textColor="@color/black"
             android:textStyle="bold" />
@@ -213,6 +223,7 @@
             android:layout_height="50dp"
             android:background="@color/light_gray"
             android:gravity="left"
+            android:padding="12dp"
             android:text="Country"
             android:textColor="@color/black"
             android:textStyle="bold" />
@@ -254,7 +265,8 @@
             android:layout_marginLeft="100dp"
             android:layout_marginTop="30dp"
             android:layout_marginRight="100dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="match_parent"
