--- a/app/src/main/res/layout/leaderboard_user_ranking_list.xml
+++ b/app/src/main/res/layout/leaderboard_user_ranking_list.xml
@@ -17,6 +17,7 @@
             android:layout_height="60dp"
             android:layout_gravity="center"
             android:gravity="center"
+            android:layout_marginStart="5dp"
             android:orientation="horizontal"
             android:weightSum="10">
 
