--- a/app/src/main/res/layout/leaderboard_user_ranking_list.xml
+++ b/app/src/main/res/layout/leaderboard_user_ranking_list.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="65dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:background="@drawable/border_list_price"
@@ -14,10 +14,10 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="65dp"
             android:layout_gravity="center"
-            android:gravity="center"
             android:layout_marginStart="5dp"
+            android:gravity="center"
             android:orientation="horizontal"
             android:weightSum="10">
 
@@ -29,21 +29,38 @@
                 android:gravity="center"
                 android:src="@drawable/ic_profile_pic" />
 
-            <TextView
-                android:id="@+id/userName"
-                android:layout_width="200dp"
+            <RelativeLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="1"
-                android:gravity="left"
-                android:paddingStart="5dp"
-                android:text="User Name T1"
-                android:textColor="@color/black" />
+                android:layout_marginStart="5dp">
+
+                <TextView
+                    android:id="@+id/userName"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="left"
+                    android:paddingStart="5dp"
+                    android:text="User Name T1"
+                    android:textColor="@color/black" />
+
+                <TextView
+                    android:id="@+id/wonPrize"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/userName"
+                    android:gravity="left"
+                    android:paddingStart="5dp"
+                    android:text="You Won 25"
+                    android:textColor="@color/green" />
+
+            </RelativeLayout>
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="5" />
+                android:layout_weight="3" />
 
             <TextView
                 android:id="@+id/userTotalPoints"
@@ -58,7 +75,7 @@
             <View
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1" />
+                android:layout_weight="3" />
 
             <TextView
                 android:id="@+id/userRank"
@@ -77,6 +94,6 @@
 
         </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
