--- a/app/src/main/res/layout/leaderboard_user_ranking_list.xml
+++ b/app/src/main/res/layout/leaderboard_user_ranking_list.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="65dp"
         android:layout_marginTop="5dp"
