--- a/app/src/main/res/layout/activity_when_live_team_preview.xml
+++ b/app/src/main/res/layout/activity_when_live_team_preview.xml
@@ -40,7 +40,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="8"
-                android:gravity="center"
+                android:gravity="left"
+                android:layout_marginStart="10dp"
                 android:text="User Name T1"
                 android:textColor="@color/white"
                 android:textSize="16sp"
