--- a/app/src/main/res/layout/fragment_completed_match.xml
+++ b/app/src/main/res/layout/fragment_completed_match.xml
@@ -5,9 +5,18 @@
     android:layout_height="match_parent"
     tools:context=".InSideMyMatches.CompletedMatchFragment">
 
-    <TextView
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swiper"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="CompletedMatchFragment" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/linerLayout1">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </FrameLayout>
