--- a/app/src/main/res/layout/match_list.xml
+++ b/app/src/main/res/layout/match_list.xml
@@ -154,6 +154,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="120dp"
             android:background="#57DBDBDB"
+            android:visibility="gone"
             android:orientation="horizontal"
             android:padding="5dp"
             android:weightSum="10">
