--- a/app/src/main/res/layout/leaderboard_user_ranking_list.xml
+++ b/app/src/main/res/layout/leaderboard_user_ranking_list.xml
@@ -52,6 +52,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/userName"
                     android:gravity="left"
+                    android:visibility="gone"
                     android:paddingStart="5dp"
                     android:text="You Won 25"
                     android:textColor="@color/green" />
