--- a/app/src/main/res/layout/single_grounder.xml
+++ b/app/src/main/res/layout/single_grounder.xml
@@ -51,6 +51,7 @@
             android:maxLines="1"
             android:paddingHorizontal="8dp"
             android:text="Player Pts"
+            android:textStyle="bold"
             android:textColor="#ffff"
             android:textSize="10dp" />
 
