--- a/app/src/main/res/layout/activity_contest.xml
+++ b/app/src/main/res/layout/activity_contest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -84,8 +84,7 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar">
+        android:layout_height="wrap_content">
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/contests"
@@ -116,20 +115,16 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="45dp"
-        android:layout_below="@+id/tabLayout"
+        android:layout_height="550dp"
         android:layout_marginTop="5dp" />
 
     <LinearLayout
         android:id="@+id/createTeamLayout"
         android:layout_width="match_parent"
         android:layout_height="38dp"
-        android:layout_alignParentBottom="true"
         android:layout_gravity="center"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
-        android:layout_marginBottom="5dp"
         android:background="@drawable/border2_black"
         android:gravity="center"
         android:orientation="horizontal"
@@ -179,11 +174,9 @@
         android:id="@+id/createTeamLay"
         android:layout_width="match_parent"
         android:layout_height="38dp"
-        android:layout_alignParentBottom="true"
         android:layout_gravity="center"
         android:layout_marginLeft="100dp"
         android:layout_marginRight="100dp"
-        android:layout_marginBottom="5dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:visibility="gone">
@@ -202,4 +195,4 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
