--- a/app/src/main/res/layout/activity_front.xml
+++ b/app/src/main/res/layout/activity_front.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_image2"
+    android:background="@drawable/forever_logo"
     android:orientation="vertical"
     tools:context=".FrontActivity">
 
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:text="Invited by a friend?"
-            android:textColor="@color/white" />
+            android:textColor="@color/black" />
 
         <View
             android:layout_width="0dp"
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:text="Already have account?"
-            android:textColor="@color/white" />
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
@@ -72,7 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:text="Enter code"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textStyle="bold" />
 
         <View
@@ -86,7 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:text="Login"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textStyle="bold" />
 
     </LinearLayout>
