--- a/app/src/main/res/layout/banner_layout.xml
+++ b/app/src/main/res/layout/banner_layout.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/allSliderBannerImages"
+        tools:ignore="ContentDescription,MissingConstraints"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:scaleType="centerCrop"
-        tools:ignore="ContentDescription,MissingConstraints" />
+        android:id="@+id/allSliderBannerImages" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
