--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,4 +12,10 @@
         <item name="android:statusBarColor" tools:targetApi="l">#BA0700</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="Theme.YoYoIq.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+    <style name="Theme.YoYoIq.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.YoYoIq.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
