--- a/app/src/main/res/layout/selected_players.xml
+++ b/app/src/main/res/layout/selected_players.xml
@@ -7,7 +7,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewSelected"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_marginLeft="2dp"
         android:layout_marginTop="2dp"
         android:layout_marginRight="2dp"
@@ -16,7 +16,7 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:orientation="horizontal"
             android:weightSum="8.2">
 
@@ -37,31 +37,45 @@
                 android:id="@+id/playerImg"
                 android:layout_width="55dp"
                 android:layout_height="60dp"
+                android:layout_gravity="center"
                 android:src="@drawable/ic_baseline_person_3" />
 
             <LinearLayout
                 android:layout_width="50dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
                 android:layout_weight="3"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/playerName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="15dp"
+                    android:layout_gravity="top"
+                    android:gravity="top"
                     android:maxLines="1"
+                    android:padding="1dp"
                     android:textColor="@color/black"
                     android:textSize="12sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/selectedBy"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:padding="1dp"
+                    android:text="Sel By 0%"
+                    android:textSize="9sp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/isPlaying"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
                     android:maxLines="1"
+                    android:padding="1dp"
                     android:textColor="@color/green"
                     android:textSize="11sp"
                     android:textStyle="bold" />
