joincontest_matches_list.xml.

--- a/app/src/main/res/layout/joincontest_matches_list.xml
+++ b/app/src/main/res/layout/joincontest_matches_list.xml
@@ -118,18 +118,37 @@
                 android:layout_weight="8"
                 android:gravity="center"
                 android:textColor="@color/red"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:visibility="gone" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="3"
+                android:drawableRight="@drawable/ic_red_small_ball"
+                android:gravity="center" />
 
             <TextView
                 android:id="@+id/done"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="8"
+                android:layout_weight="3"
                 android:gravity="center"
                 android:textColor="@color/red"
-                android:textStyle="bold"
-                android:visibility="gone" />
+                android:textSize="10sp"
+                android:textStyle="bold" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
 
             <TextView
                 android:id="@+id/shortNameB"
@@ -155,6 +174,7 @@
             android:layout_marginTop="120dp"
             android:background="#57DBDBDB"
             android:orientation="horizontal"
+            android:visibility="gone"
             android:padding="5dp"
             android:weightSum="10">
 
