--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -20,10 +20,12 @@
     <item
         android:id="@+id/chat"
         android:enabled="true"
+        android:visible="false"
         android:icon="@drawable/ic_baseline_chat_bubble_24"
         android:title="@string/title_chat" />
     <item
         android:id="@+id/rewards"
+        android:visible="false"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_card_giftcard_24"
         android:title="@string/title_Rewards" />
