joincontest_matches_list.xml.

--- a/app/src/main/res/layout/joincontest_matches_list.xml
+++ b/app/src/main/res/layout/joincontest_matches_list.xml
@@ -140,7 +140,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="3"
-                android:gravity="center"
+                android:layout_marginStart="5dp"
+                android:gravity="left"
                 android:textColor="@color/red"
                 android:textSize="10sp"
                 android:textStyle="bold" />
