--- a/app/src/main/res/layout/activity_front.xml
+++ b/app/src/main/res/layout/activity_front.xml
@@ -53,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:text="Already have account?"
+            android:text="Already a user?"
             android:textColor="@color/black" />
 
     </LinearLayout>
