--- a/app/src/main/res/layout/activity_contest.xml
+++ b/app/src/main/res/layout/activity_contest.xml
@@ -195,7 +195,7 @@
             android:layout_gravity="center"
             android:background="@drawable/border2_black"
             android:gravity="center"
-            android:text="+ CREATED TEAM"
+            android:text="+ CREATE TEAM"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold" />
